add preview screen and fix bug